# GenOCR

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml  requirements.txt  space.yaml
.github/workflows/: deploy.yml
app/: api.py  limits.py  main.py  state.py  views.py
app/pipeline/: __init__.py  decide.py  native.py  ocr.py  paddle_ocr.py  render.py  utils.py
app/templates/: base.html  error.html  index.html  result.html  status_partial.html
tests/: test_smoke.py
